# adbc-taos

./: .env.example  Cargo.toml  PROJECT_INDEX.md  README.md
benches/: conversion_benchmark.rs
examples/: basic.rs  insert.rs  metadata.rs  query.rs  table_ops.rs
src/: connection.rs  database.rs  driver.rs  error.rs  lib.rs  pool.rs  reader.rs  statement.rs  types.rs  utils.rs
tests/: integration_tests.rs  readme_examples.rs
tests/common/: mod.rs
