[package]
name = "adbc-taos"
version = "0.1.0"
edition = "2024"

[dependencies]
adbc_core = "0.21.0"
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
taos-client = { version = "0.12.3", package = "taos" }
deadpool = "0.10.0"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["full", "tracing", "tokio-macros"] }
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
[dev-dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.100"
criterion = "0.5"

[[bench]]
name = "conversion_benchmark"
harness = false

[profile.bench]
debug = 1